MAHOUT-1258 Another shot at findbugs and checkstyle
git-svn-id: https://svn.apache.org/repos/asf/mahout/trunk@1492416 13f79535-47bb-0310-9956-ffa450edef68